deploy/kustomize/overlays/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: kubestellar-console
  annotations:
    haproxy.router.openshift.io/timeout: 5m
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: kubestellar-console
    weight: 100
  wildcardPolicy: None
